--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -41,13 +41,13 @@ http {
     proxy_next_upstream error;
 
     server {
-        listen 80;
+        listen 45555;
 
         # Allow file uploads
         client_max_body_size 50M;
 
         location static/ {
-            root /srv/www/3n1b.com/;
+            root ~/project/bbs/;
             if ($query_string) {
                 expires max;
             }
